# vscodeext

./: .eslintrc.cjs  .gitignore  .prettierignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  Development.md  README-marketplace.md  README.md  ThirdPartyNotices.txt  esbuild.mjs  package-lock.json  package.json  package.nls.json  tsconfig.json
.github/: pull_request_template.md
.reuse/: dep5
ci-scripts/: package-lock.json  package.json  tsconfig.json
common/: .eslintrc.cjs
doc/: CMakeLists.txt  README.md  vscodeext.qdocconf
doc/config/: vscodeext-project.qdocconf
doc/config/style/: qt5-sidebar.html
doc/online/: vscodeext.qdocconf
doc/src/: externallinks.qdoc  vscodeext-toc.qdoc  vscodeext.qdoc
doc/src/getting-started/: vscodeext-getting-started.qdoc  vscodeext-installation.qdoc  vscodeext-overview.qdoc
doc/src/how-to/: vscodeext-how-to-debug-apps-wasm.qdoc  vscodeext-how-to-debug-apps.qdoc  vscodeext-how-to-desing-widget-based-uis.qdoc  vscodeext-how-to-read-qt-documentation.qdoc  vscodeext-how-to-register-qt-installations.qdoc  vscodeext-how-to-turn-on-qmlls.qdoc  vscodeext-how-to-use-qt-with-other-extensions.qdoc  vscodeext-how-tos.qdoc
doc/src/reference/: vscodeext-reference-kits.qdoc  vscodeext-reference-settings.qdoc  vscodeext-reference.qdoc
doc/src/tutorials/: vscodeext-tutorials-qt-widgets.qdoc  vscodeext-tutorials.qdoc
doc/tutorials/AddressBook/: CMakeLists.txt  adddialog.ui  addressbook.h  addressbook.ui  main.cpp
qt-core/: CHANGELOG.md  README.md  ThirdPartyNotices.txt  esbuild.mjs  package-lock.json  package.json  package.nls.json  tsconfig.json
qt-cpp/: .eslintignore  .eslintrc.cjs  .vscodeignore  CHANGELOG.md  README.md  ThirdPartyNotices.txt  package-lock.json  package.json  package.nls.json  tsconfig.json
qt-lib/: LICENSE  package-lock.json  package.json  tsconfig.json
qt-official/: CHANGELOG.md  README.md  ThirdPartyNotices.txt  esbuild.mjs  package-lock.json  package.json  package.nls.json  tsconfig.json
qt-official/src/test/integration/project-folder/: CMakeLists.txt
qt-qml/: CHANGELOG.md  README.md  ThirdPartyNotices.txt  package-lock.json  package.json  package.nls.json  tsconfig.json
qt-ui/: CHANGELOG.md  README.md  ThirdPartyNotices.txt  esbuild.mjs  package-lock.json  package.json  package.nls.json  tsconfig.json
scripts/: check_changelog.ts  check_licenses.ts  check_package.ts  check_style.ts  ci_lint.ts  common.ts  eslint.ts  generate_licenses.ts  install-ext.ts  (+4 more)
(+153 files in other folders)
